# acty

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: group_tui_demo.py  lane_demo.py  tenacity_retry_demo.py  tui_console_bindings_manual_check.md  tui_console_bindings_manual_check.py  tui_console_capture_demo.py
src/acty/: __init__.py  client.py  engine.py  exec_resolver.py  executors.py  groups.py  lane.py  logging.py  result_handlers.py  retry_budget.py
tests/: __init__.py  conftest.py  test_acty_client.py  test_acty_client_integration.py  test_compose_handlers.py  test_context_propagation.py  test_deferred_primer.py  test_engine_admission.py  test_engine_boundary_edge_cases.py  test_engine_cache_integration.py  test_engine_close_all_groups.py  test_engine_dispatch_defaults.py  test_engine_policy_matrix.py  test_engine_resource_management.py  test_engine_results.py  test_engine_retry_policies.py  test_error_payload_policy_runtime.py  test_event_invoke_kwargs.py  test_event_observability.py  test_group_context.py  test_group_dependencies.py  test_group_leases.py  test_group_registry.py  test_group_registry_integration.py  test_integration_pipeline.py  test_lane.py  test_lane_system.py  test_open_group_api.py  test_resolver_executor.py  test_result_handlers.py  test_retry_budget.py  test_retry_payload_resolver.py  test_runtime_stats.py  test_tenacity_retry_adapter.py  test_tui_app_flow.py  test_tui_cli.py  test_tui_console_capture.py  test_tui_demo_cli.py  test_tui_formatting.py  test_tui_history.py  (+6 more)
tests/support/: __init__.py  asyncio_tools.py  (+1 more)
(+26 files in other folders)
